@@ -1,5 +1,10 @@
 2008-09-21  daniel g. siegel <dgsiegel@gmail.com>
 
+	* www.gnome.org/projects/cheese/Makefile.am: 
+	  fix some build errors
+
+2008-09-21  daniel g. siegel <dgsiegel@gmail.com>
+
 	* www.gnome.org/projects/cheese/data/images/cheese-2.24.png,
 	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.24.0-countdown.jpg,
 	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.24.0-effects.jpg,
